[package]
name = "pi_file"
version = "0.2.2"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"
description = "一个文件监听器"
repository = "https://github.com/GaiaWorld/pi_file.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "file"]

[dependencies]
npnc = "0.2"
notify = "4.0"
pi_atom = "0.5"