[package]
name = "rt_store"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
fnv = "1.0"
async = { path = "../../pi_lib/async" }
async_file = { path = "../async_file" }
rt_file = { path = "../rt_file" }
hash = {path="../../pi_lib/hash", features = ["xxhash"]}
pi_store = { path = "../../pi_store" }
